syntax = "proto3";

option go_package = "amusing-x.com/pangu/panguservice";

package panguservice;

message LoginInfo {
  string session_id = 1;
}

message OAuthLoginRequest {
  string provider = 1;
  string code = 2;
}

message OAuthLoginResponse {
  bool result = 1;
  LoginInfo login_info  = 2;
}